tests/errors/compiler/not_int_in_stanfunc/float_argument.c
int main() 
{	
	send_int_to_robot(1.1);
	return 0;
}
